# django-bulma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: release.yml  test.yml
bulma/: __init__.py  apps.py  bulma.py  conf.py  text.py  types.py  utils.py
bulma/management/commands/: bulma.py  copy_bulma_static_into_project.py
bulma/static/bulma/: package-lock.json  package.json
bulma/static/bulma/css/: style.css  style.css.map  style.min.css
bulma/static/bulma/sass/: package-lock.json  package.json  style.sass
bulma/static/css/: style.css  style.css.map
bulma/static/sass/: package-lock.json  package.json  style.sass
bulma/templates/: pagination.html  site_base.html
bulma/templates/_layouts/: one-column-center.html
bulma/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
bulma/templates/bulma/: base.html  pagination.html
bulma/templates/bulma/forms/: field.html  field_errors.html  field_help.html  field_icon_left.html  field_icon_right.html  field_icons.html  field_label.html  field_without_icons.html  fields.html  form.html  formset.html
bulma/templates/bulma/forms/fields/: checkbox.html  file.html  input.html  multiple_checkbox.html  multiple_select.html  other.html  radio.html  select.html  textarea.html
bulma/templates/bulma/tags/: font_awesome.html
bulma/templates/registration/: base.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
bulma/templatetags/: bulma_tags.py
bulma/tests/: conftest.py  manage.py  test_commands.py  test_inputs.py  test_settings.py  test_templates.py  test_utils.py  utils.py
demo/: bulma  requirements.txt
demo/config/: settings.py  urls.py
demo/showcase/: apps.py  forms.py  urls.py  views.py
demo/showcase/migrations/: 0001_initial.py
demo/showcase/templates/showcase/: form.html  paginated_list.html
demo/templates/: home.html
example/: requirements.txt
example/config/: settings.py  urls.py
example/templates/: base.html  home.html  site_base.html
showcase/: apps.py  forms.py  urls.py
showcase/migrations/: 0003_alter_task_id.py
showcase/templates/showcase/: form.html
showcase/templates/showcase/field_templates/: custom_textarea.html
test_project/: manage.py  settings.py  urls.py  wsgi.py
test_project/showcase/: models.py
test_project/showcase/migrations/: 0002_auto_20180226_1645.py
test_project/showcase/tests/: test_commands.py
test_project/static/bulma/css/: style.css  style.min.css
test_project/static/bulma/sass/: package-lock.json  package.json  style.sass
test_project/templates/: home.html
tests/testapp/: settings.py
