[tool.poetry]
name = "django-bulma"
version = "0.10.0"
description = "Bulma CSS Framework for Django projects"
authors = ["Tim Kamanin <tim@timonweb.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://timonweb.com"
keywords = ["django", "css", "bulma", "theme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django"
]
packages = [
    { include = "bulma" }
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=2.2"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
pytest = "^8.4.1"
tox = "^4.28.3"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
