[project]
name = "django-bulma"
version = "0.11.1"
description = "Bulma CSS Framework for Django projects"
authors = [{ name = "Tim Kamanin", email = "tim@timonweb.com" }]
license = "MIT"
readme = "README.md"
keywords = ["django", "css", "bulma", "theme"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django",
]
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://timonweb.com"

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "pytest>=8.4.1",
    "tox>=4.28.3",
    "beautifulsoup4>=4.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bulma"]
